--- a/src/assets/styles/flex.scss
+++ b/src/assets/styles/flex.scss
@@ -11,6 +11,14 @@
   display: flex;
   align-items: start;
 }
+.flexalign-end {
+  display: flex;
+  align-items: end;
+}
+.flexpack-end {
+  display: flex;
+  justify-content: end;
+}
 .flexitem-1 {
   flex: 1;
 }
