--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -6,3 +6,15 @@
 .full-height {
   height: 100%;
 }
+.full-width {
+  width: 100%;
+}
+.ml10 {
+  margin-left: 10px;
+}
+.mt10 {
+  margin-top: 10px;
+}
+.curp {
+  cursor: pointer;
+}
